--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -95,7 +95,7 @@ android {
             debuggable true
             jniDebuggable true
             signingConfig signingConfigs.debug
-            applicationIdSuffix ".beta"
+            applicationIdSuffix ".gacontest"
             minifyEnabled false
             shrinkResources false
             multiDexEnabled true
@@ -136,7 +136,7 @@ android {
             debuggable false
             jniDebuggable false
             signingConfig signingConfigs.debug
-            applicationIdSuffix ".beta"
+            applicationIdSuffix ".gacontest"
             minifyEnabled true
             multiDexEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
