--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #Sat Mar 12 05:53:50 MSK 2016
 APP_VERSION_NAME=9.4.2
 APP_VERSION_CODE=3106
-APP_PACKAGE=org.telegram.messenger
+APP_PACKAGE=me.grishka.tgcontest_calls
 RELEASE_KEY_PASSWORD=android
 RELEASE_KEY_ALIAS=androidkey
 RELEASE_STORE_PASSWORD=android
